# MJImageSoftware

./: CMakeLists.txt  CMakeLists.txt.user.c0b963f  CMakeSettings.json  Icon.qrc  README.md
Config/: ConnectConfig.ini  imagepath.cfg
Config/Data/: data1.ini
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/BasicsSupport/: BasicsSupport.cpp  BasicsSupport.h  CMakeLists.txt  threadpool.cpp  threadpool.h
src/Chart/: CMakeLists.txt  chartwidget.cpp  chartwidget.h
src/Control/: aboutme.cpp  aboutme.h  cameraagent.cpp  cameraagent.h  mainwindow.cpp  mainwindow.h  presenter.cpp  presenter.h  videopathset.cpp  videopathset.h
src/Cuda/: CMakeLists.txt  CUDARandom.cu  CUDARandom.cuh  Cuda.cpp  Cuda.h  Test.cu
src/DataProcess/: CMakeLists.txt  DataCommumication.cpp  DataCommumication.h  DataConvert.cpp  DataConvert.h  TCPConnect.cpp  TCPConnect.h  datainterface.cpp  datainterface.h  datasetinformation.cpp  datasetinformation.h  tcpset.cpp  tcpset.h
src/LogHandler/: LogHandler.cpp  LogHandler.h  loghead.h  systemmessage.cpp  systemmessage.h
src/MJIS_Agent/: CMakeLists.txt  mjis_agent.cpp  mjis_agent.h  mjis_agent_api.h  mjis_agent_macro.h  mjis_camera.cpp  mjis_camera.h  mjis_imageagent.cpp  mjis_imageagent.h  mjis_localcamera.h  mjis_localcameraui.cpp  mjis_localcameraui.h  mjis_localcameraui.ui  mjis_mvcamera.cpp  mjis_mvcamera.h  mjis_networkcamera.cpp  mjis_networkcamera.h  mjis_tabwidget.cpp  mjis_tabwidget.h  mjis_tabwidget.ui
src/MJIS_Camera/: CMakeLists.txt  mjis_camera_api.h  mjis_camera_global.h  mjis_camera_macro.h  mjis_localcamera.cpp  mjis_localcamera.h  mjis_mvcamera.cpp  mjis_mvcamera.h
src/MJIS_Chart/: CMakeLists.txt
src/MJIS_Core/: CMakeLists.txt  mjis_core_api.h  mjis_core_global.h  mjis_imageagent.cpp  mjis_imageagent.h  mjis_presenter.cpp  mjis_presenter.h
src/MJIS_HMI/: CMakeLists.txt  mjis_aboutme.cpp  mjis_aboutme.h  mjis_aboutme.ui  mjis_chartwidget.cpp  mjis_chartwidget.h  mjis_chartwidget.ui  mjis_hmi_api.h  mjis_hmi_global.h  mjis_localcameraui.h  mjis_systemmessage.cpp  mjis_systemmessage.h  mjis_systemmessage.ui  mjis_tabwidget.h  mjis_videopathset.cpp
src/MJIS_HMI/include/: MJIS_HMI.h  mjis_aboutme.h  mjis_configui.h  mjis_datainterface.h  mjis_datasetinformation.h  mjis_dockvideo.h  mjis_hmi_api.h  mjis_hmi_global.h  mjis_networkcamera.h  mjis_systemmessage.h  mjis_tabwidget.h  mjis_tcpset.h  mjis_videopathset.h
src/MJIS_HMI/src/: MJIS_HMI.cpp  mjis_chartwidget.cpp  mjis_configui.cpp  mjis_datainterface.cpp  mjis_datainterface.ui  mjis_datasetinformation.cpp  mjis_datasetinformation.ui  mjis_dockvideo.cpp  mjis_localcameraui.cpp  mjis_networkcamera.cpp  mjis_networkcamera.ui  mjis_tabwidget.cpp  mjis_tcpset.cpp  mjis_tcpset.ui  mjis_videopathset.ui  qcustomplot.cpp
src/MJIS_ImageProcess/: Bilateral.ui  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  CameraImageManage.h  CameraManage.cpp  CameraManage.h  FeatureExtraction.cpp  FeatureExtraction.h  ImageControl.cpp  ImageControl.h  ImageMainContoller.cpp  ImageMainContoller.h  ImageProcessManage.cpp  ImageProcessManage.h  binaryimageui.ui  edgedetection.cpp  edgedetection.h  gaussian.ui  image_global.h  imagefileio.cpp  imagefileio.h  imageprocess.cpp  imageprocess.h  mean.ui  median.ui  mjis_configui.cpp  mjis_configui.h  mjis_dockvideo.cpp  mjis_dockvideo.h  mjis_dockvideo.ui  mjis_imagelibconnect.cpp  mjis_imagelibconnect.h  mjis_imageprocess_api.h  mjis_imageprocess_macro.h  mjis_processinginterface.cpp  mjis_processinginterface.h  mjis_processinginterface.ui
src/MJIS_ImageProcess/Camera/: GigECamera_Types.h  MVGigE.h  MVImageC.h  MVSequenceDlg.h
src/MJIS_MachineLearning/: CMakeLists.txt  MachieLnearning.cpp  MachieLnearning.h  configinterface.h  configinterface.ui  datapreprocessing.h  machinelearning.h  randomforest.cpp  randomforest.h  randomforestconfig.cpp
src/MJIS_NetWork/: CMakeLists.txt  DataConvert.h  TCPConnect.cpp  TCPConnect.h  mjis_network_global.h
src/MachineLearning/: CMakeLists.txt  Test.cpp  configinterface.cpp  configinterface.h  datapreprocessing.cpp  machinelearning.h  neuralnetwork.cpp  neuralnetwork.h  randomforest.cpp  randomforest.h  randomforestconfig.h  randomforestconfig.ui
src/NeuralNetwork/: CMakeLists.txt  CMakeSettings.json  CNN.cpp  CNN.h  Test.cpp  neuralnetwork.cpp  neuralnetwork.h
src/UI/: chartwidget.h
src/old/: CameraImageManage.cpp  CameraImageManage.h  DataCommumication.h  MainController.cpp  MainController.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  presenter.cpp  presenter.h
